--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       href="./144-1445791_transparent-movie-marquee-png-flat-movies-icon-png.png"
@@ -17,6 +26,7 @@
   <body>
     <header>
       <form id="form">
+        <h2 class="name">Movie Review</h2>
         <input type="text" id="search" class="search" placeholder="Search" />
       </form>
     </header>
